add capstone 1 code s20

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	<!-- Projects Section Start -->
 	<div id="projects" class="container-fluid text-center my-5 p-3">
 		<h3 class="my-5" id="projects-title">My Projects</h3>
-		<div class="row justify-content-center mb-5 gap-4">
+		<div class="row justify-content-center justify-content-lg-around mb-5 gap-4">
 			<!-- Card 1 -->
 			<div class="card col-sm-12 col-md-4 mb-5" style="width: 18rem;">
 				<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTjJ9i9SuBxd7P9P8Vuv42xrdbIwcRbYh7rjg&s" class="card-img-top img-fluid" alt="...">
@@ -120,14 +120,15 @@
 					<div class="col-6 col-md-2 p-3">
 						<img src="./images/logo-sublime-text-3.png" class="img-fluid" >
 					</div>
-					<!-- Gitlab Logo -->
-					<div class="col-6 col-md-2 p-3">
-						<img src="./images/logo-gitlab-ci-cd.png" class="img-fluid">
-					</div>
 					<!-- Bootstrap Logo -->
 					<div class="col-6 col-md-2 p-3">
 						<img src="./images/logo-bootstrap.png" class="img-fluid">
 					</div>
+					<!-- Gitlab Logo -->
+					<div class="col-6 col-md-2 p-3">
+						<img src="./images/logo-gitlab-ci-cd.png" class="img-fluid">
+					</div>
+					
 				</div>
 			</div>
 		</div>
@@ -138,9 +139,9 @@
 					<div class="col-6 col-md-2 p-3">
 						<img src="./images/logo-expressjs.png" class="img-fluid">
 					</div>
-					<!-- NodeJS Logo -->
+					<!-- React Logo -->
 					<div class="col-6 col-md-2 p-3">
-						<img src="./images/logo-nodejs.png" class="img-fluid">
+						<img src="./images/logo-react.png" class="img-fluid">
 					</div>
 					<!-- MongoDB Logo -->
 					<div class="col-6 col-md-2 p-3">
@@ -150,9 +151,9 @@
 					<div class="col-6 col-md-2 p-3">
 						<img src="./images/logo-postman.png" class="img-fluid">
 					</div>
-					<!-- React Logo -->
+					<!-- NodeJS Logo -->
 					<div class="col-6 col-md-2 p-3">
-						<img src="./images/logo-react.png" class="img-fluid">
+						<img src="./images/logo-nodejs.png" class="img-fluid">
 					</div>
 					<!-- Heroku Logo -->
 					<div class="col-6 col-md-2 p-3">
@@ -232,7 +233,6 @@
 					</div>
 				</form>
 			</div>
-
 
 		</div>
 	</div>
